objects/Five9CampaignDelaySettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Add campaign Id and name for which five9 delay is applicable</description>
    <fields>
        <fullName>CampaignId__c</fullName>
        <description>Add Parent Campaign Id</description>
        <label>ParentCampaignId</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <description>Add Parent Campaign Name</description>
        <label>Campaign Name</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delay_in_mins__c</fullName>
        <label>Delay in mins</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ListName__c</fullName>
        <description>List name containing Parent Campaign</description>
        <label>ListName</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Five9CampaignDelaySettings</label>
</CustomObject>